@@ -33,10 +33,10 @@ libscaler_a_SOURCES = scaler.c
 libscaler_a_LIBADD = scalers16.o scalers32.o
 
 scalers16.o: $(srcdir)/scalers.c
-	$(COMPILE) -DSCALER_DATA_SIZE=2 -c $(srcdir)/scalers.c -o scalers16.o
+	$(AM_V_CC) $(COMPILE) -DSCALER_DATA_SIZE=2 -c $(srcdir)/scalers.c -o scalers16.o
 
 scalers32.o: scalers.c
-	$(COMPILE) -DSCALER_DATA_SIZE=4 -c $(srcdir)/scalers.c -o scalers32.o
+	$(AM_V_CC) $(COMPILE) -DSCALER_DATA_SIZE=4 -c $(srcdir)/scalers.c -o scalers32.o
 
 noinst_HEADERS = scaler.h scaler_internals.h
 
